Renamed ExerciseRequest to ExerciseRequestDTO
