# src/main/java/com/kuba/GymTrackerAPI/exercise/ExerciseRequestDTO.java
@@ -4,7 +4,7 @@ import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
 import jakarta.validation.constraints.Size;
 
-public record ExerciseRequest(
+public record ExerciseRequestDTO(
         @NotNull(message = "Název cviku nesmí být prázdný!")
         @NotBlank(message = "Název cviku nesmí být prázdný!")
         @Size(min = 3, max = 50, message = "Název cviku musí být minimálně 3 znaky dlouhý a maximálně 50 znaků dlouhý!")
