# src/main/resources/api-docs.yaml
@@ -167,7 +167,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ExerciseRequest'
+              $ref: '#/components/schemas/ExerciseRequestDTO'
         required: true
       responses:
         "201":
@@ -226,7 +226,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/ExerciseRequest'
+              $ref: '#/components/schemas/ExerciseRequestDTO'
         required: true
       responses:
         "200":
